✨ Add support for GCR

--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,6 @@ fabric.properties
 .idea/codestream.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,ruby,rubymine
+
+apps*
+!apps.example.yaml
